Fix renewChanPassword + add getonechan + add getonechanmessage
