# server/main.go
@@ -81,6 +81,8 @@ func main() {
 	channel.POST("", route.CreateChan)
 	channel.POST("/name", route.CheckChanName)
 	channel.POST("/:chanId/renew", route.RenewChanPassword)
+	channel.GET("/:chanId", route.GetOneChan)
+	channel.GET("/:chanId/message", route.GetOneChanMessage)
 
 	e.Logger.Fatal(e.Start(fmt.Sprintf(":%s", os.Getenv("PORT"))))
 }
